@@ -1,5 +1,5 @@
 #ifndef lint
-static char *RCSid() { return RCSid("$Id: mouse.c,v 1.95 2007/08/31 20:03:43 sfeam Exp $"); }
+static char *RCSid() { return RCSid("$Id: mouse.c,v 1.96 2007/09/24 20:05:20 sfeam Exp $"); }
 #endif
 
 /* GNUPLOT - mouse.c */
@@ -1908,10 +1908,12 @@ do_save_3dplot(struct surface_points *plots, int pcount, int quick)
      (A.log && ((!(A.set_autoscale & AUTOSCALE_MIN) && A.set_min <= 0) || \
 		(!(A.set_autoscale & AUTOSCALE_MAX) && A.set_max <= 0)))
 
-    if (!plots) {
-	/* this might happen after the `reset' command for example
-	 * which was reported by Franz Bakan.  replotrequest()
-	 * should set up again everything. */
+    if (!plots || !refresh_ok) {
+	/* !plots might happen after the `reset' command for example
+	 * (reported by Franz Bakan).
+	 * !refresh_ok can happen for example if log scaling is reset (EAM).
+	 * replotrequest() should set up everything again in either case.
+	 */
 	replotrequest();
     } else {
 	if (M_TEST_AXIS(X_AXIS) || M_TEST_AXIS(Y_AXIS) || M_TEST_AXIS(Z_AXIS)
